--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1 class="col-12 text-center">Formation by "La Manu"</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-1 rounded bg-info text-center text-white border">C#</div>
-            <div class="col-1 rounded bg-info text-center text-white border">.NET</div>
+            <button type="button" class="btn btn-info mr-1">C#</button>
+            <button type="button" class="btn btn-info ml-1">.NET</button>
         </div>
     </div>
 
