--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="FR">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
     <title>Exercice 3</title>
 </head>
-
 <body>
     <div class="container">
         <div class="row">
             <h1 class="col-12 text-center">Formation by "La Manu"</h1>
         </div>
-        <div class="row justify-content-center">
-            <button type="button" class="btn btn-info mr-1">C#</button>
-            <button type="button" class="btn btn-info ml-1">.NET</button>
+        <div class="row">
+            <h2 class="col text-center">
+                <span class="badge badge-info">C#</span>
+                <span class="badge badge-info">.NET</span>
+            </h2>
         </div>
     </div>
-
-
 </body>
-
 </html>
